<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/changeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escoger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="42dp"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="232dp"
        android:layout_height="196dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/b1"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/j1" />

        <RadioButton
            android:id="@+id/b2"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/j2" />

        <RadioButton
            android:id="@+id/b3"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/j3" />

        <RadioButton
            android:id="@+id/b4"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/j4" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="119dp"
        android:layout_height="49dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="200dp"
        android:text="@string/checkbox_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/lang"
        android:layout_width="94dp"
        android:layout_height="38dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:text="Idioma"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>